--- a/p.html
+++ b/p.html
@@ -21,7 +21,7 @@ font-size: 12px;
             color: #999">Pen</a>
              each week</div>
 
-             <script>
+        <!--     <script>
                $(function() {
   $(".dark").click(function() {
     $("#feed").addClass('dark');
@@ -50,3 +50,4 @@ font-size: 12px;
   });
 });
 </script>
+-->
