--- a/test.html
+++ b/test.html
@@ -17,6 +17,16 @@
         Тест <strong>Bulma</strong>!
       </p>
     </div>
+    
+        <div class="container">
+<figure class="image is-128x128">
+  <img src="media/img/tubes_1.jpg">
+</figure>
+    </div>
+    
   </section>
   </body>
 </html>
+
+
+
