--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
     </div>
     
         <div class="container">
-<figure class="image is-128x128">
+<figure class="image is-4by5">
   <img src="media/img/tubes_1.jpg">
 </figure>
     </div>
