--- a/test.html
+++ b/test.html
@@ -20,8 +20,8 @@
       </p>
     </div>
     
-        <div class="container">
-<figure class="image is-4by5">
+        <div class="container" style="width: 50%;">
+<figure class="image is-1by1">
   <img src="media/img/tubes_1.jpg">
 </figure>
     </div>
