--- a/test.html
+++ b/test.html
@@ -10,8 +10,8 @@
   <body>
   <section class="section">
     <div class="container">
-      <h1 class="title">
-        Hello World
+      <h1 class="title" style="text-align: center;">
+        Установки
       </h1>
       <p class="subtitle">
         Тест <strong>Bulma</strong>!
