--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
     
         <div class="container" style="width: 50%;">
 <figure class="image is-4by5">
-  <img src="media/img/tubes_1.jpg">
+  <img src="media/img/tubes_1.jpg" style="border-radius: 10px;">
 </figure>
     </div>
     
