--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
         Установки
       </h1>
       <p class="subtitle">
-        Тест <strong>Bulma</strong>!
+     <!--Тест <strong>Bulma</strong>!-->
       </p>
     </div>
     
