--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <style>
       body{font-family: 'Press Start 2P', cursive;}
+      #frame{width:100%;height:15vh;}
     </style>
   </head>
   <body>
