--- a/testt.html
+++ b/testt.html
@@ -17,7 +17,7 @@
   <section class="section">
     <div class="container">
       <h1 class="title" style="text-align: center;">
-        Установки
+        Установки в ресторанах
       </h1>
       <p class="subtitle">
      <!--Тест <strong>Bulma</strong>!-->
