--- a/testt.html
+++ b/testt.html
@@ -36,9 +36,10 @@
     <div class="container" style="
     display: inline;
 ">
-
+<center>
   <img src="media/img/tubes_1.jpg" style="border-radius: 10px;width: 45%;">
-    <img src="media/img/tubes_5.jpg" style="border-radius: 10px;width: 50%;">
+    <img src="media/img/tubes_5.jpg" style="border-radius: 10px;width: 45%;">
+      </center>
 
     </div>
     
