--- a/testt.html
+++ b/testt.html
@@ -10,7 +10,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <style>
       body{font-family: 'Press Start 2P', cursive;}
-      #frame{width:48%;height:47vh;}
+      #frame{width:48%;height:47vh;border-radius: 10px;}
     </style>
   </head>
   <body>
