--- a/testt.html
+++ b/testt.html
@@ -66,10 +66,10 @@
     </div>-->
     
             <div class="container">
-
+              <center>
   <img src="media/img/tubes_2.jpeg" style="border-radius: 10px;">
-
-    </div>
+              </center>
+             </div>
     
                 <div class="container">
 
