--- a/testt.html
+++ b/testt.html
@@ -95,6 +95,14 @@
                       </center>
     </div>
     
+                        <div class="container">
+                      <center>
+                        <a href="media/img/tubes_6.jpg">
+  <img src="media/img/tubes_41.jpg" style="border-radius: 10px;">
+                        </a>
+                      </center>
+    </div>
+    
                        <!--<div class="container">
   <img src="media/img/tubes_5.jpg" style="border-radius: 10px;">
     </div>-->
