--- a/testt.html
+++ b/testt.html
@@ -102,6 +102,13 @@
                         </a>
                       </center>
     </div>
+                            <div class="container">
+                      <center>
+                        <a href="media/img/tubes_7.jpg">
+  <img src="media/img/tubes_7.jpg" style="border-radius: 10px;">
+                        </a>
+                      </center>
+    </div>
     
                        <!--<div class="container">
   <img src="media/img/tubes_5.jpg" style="border-radius: 10px;">
