--- a/r.html
+++ b/r.html
@@ -20,7 +20,7 @@
   <section class="section">
     <div class="container">
       <h1 class="title" style="text-align: center;">
-        Установки в ресторанах
+        <a href="https://youtu.be/ZoDt5Xyc32A">Установки в ресторанах</a>
       </h1>
       <p class="subtitle">
      <!--Тест <strong>Bulma</strong>!-->
