--- a/r.html
+++ b/r.html
@@ -20,7 +20,9 @@
   <section class="section">
     <div class="container">
       <h1 class="title" style="text-align: center;">
-        <a href="https://youtu.be/ZoDt5Xyc32A">Установки в ресторанах</a>
+        <center>
+        <a href="https://youtu.be/ZoDt5Xyc32A" target="blank">Установки в ресторанах</a>
+        </center>
       </h1>
       <p class="subtitle">
      <!--Тест <strong>Bulma</strong>!-->
