--- a/r.html
+++ b/r.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-  <section class="section">
+  <section class="section" style="background-image: url(http://pixelartmaker.com/art/e330350e041704c.png);background-size: 13%;background-repeat: no-repeat;">
     <div class="container">
       <h1 class="title" style="text-align: center;">
         <center>
