--- a/r.html
+++ b/r.html
@@ -152,6 +152,27 @@
     </div>
   
                                 <center>
+                        <a href="media/img/clo.jpg">
+  <img src="media/img/clo.png" style="border-radius: 10px;">
+                        </a>
+                      </center>
+    </div>
+
+                                <center>
+                        <a href="media/img/clos.jpg">
+  <img src="media/img/clos.png" style="border-radius: 10px;">
+                        </a>
+                      </center>
+    </div>
+
+                                <center>
+                        <a href="media/img/b.jpg">
+  <img src="media/img/b.png" style="border-radius: 10px;">
+                        </a>
+                      </center>
+    </div>
+
+                                <center>
                         <a href="media/img/viz.png">
   <img src="media/img/viz.png" style="border-radius: 10px;">
                         </a>
