--- a/r.html
+++ b/r.html
@@ -152,7 +152,7 @@
     
                                     <center>
                         <a href="media/img/post.jpg">
-  <img src="media/img/post.png" style="border-radius: 10px;">
+  <img src="media/img/post.jpg" style="border-radius: 10px;">
                         </a>
                       </center>
 
@@ -165,21 +165,21 @@
   
                                 <center>
                         <a href="media/img/clo.jpg">
-  <img src="media/img/clo.png" style="border-radius: 10px;">
+  <img src="media/img/clo.jpg" style="border-radius: 10px;">
                         </a>
                       </center>
     </div>
 
                                 <center>
                         <a href="media/img/clos.jpg">
-  <img src="media/img/clos.png" style="border-radius: 10px;">
+  <img src="media/img/clos.jpg" style="border-radius: 10px;">
                         </a>
                       </center>
     </div>
 
                                 <center>
                         <a href="media/img/b.jpg">
-  <img src="media/img/b.png" style="border-radius: 10px;">
+  <img src="media/img/b.jpg" style="border-radius: 10px;">
                         </a>
                       </center>
 
