--- a/r.html
+++ b/r.html
@@ -195,7 +195,7 @@
 
   <video width="400" height="300" controls="controls" poster="media/img/3B0EDC09-EDC8-4C53-86FC-04A2BC7E820D.mp4">
 
-   <source src="media/img/3B0EDC09-EDC8-4C53-86FC-04A2BC7E820D.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+   <source src="media/img/3B0EDC09-EDC8-4C53-86FC-04A2BC7E820D.mp4" type='video/mp4'>
   </video>
     
     
