--- a/r.html
+++ b/r.html
@@ -159,7 +159,7 @@
 
                                 <center>
                         <a href="media/img/postr.jpg">
-  <img src="media/img/postr.png" style="border-radius: 10px;">
+  <img src="media/img/postr.jpg" style="border-radius: 10px;">
                         </a>
                       </center>
   
