--- a/r.html
+++ b/r.html
@@ -191,6 +191,13 @@
   <img src="media/img/viz.png" style="border-radius: 10px;">
                         </a>
                       </center>
+
+                                <center>
+                        <a href="media/img/r1.png">
+  <img src="media/img/r1.png" style="border-radius: 10px;">
+                        </a>
+                      </center>
+
     </div>
 
   <video width="400" height="300" controls="controls" poster="media/img/3B0EDC09-EDC8-4C53-86FC-04A2BC7E820D.mp4">
