--- a/r.html
+++ b/r.html
@@ -183,6 +183,12 @@
                         </a>
                       </center>
 
+                                <center>
+                        <a href="media/img/b1.jpg">
+  <img src="media/img/b1.jpg" style="border-radius: 10px;">
+                        </a>
+                      </center>
+
 
 
 
