--- a/r.html
+++ b/r.html
@@ -206,10 +206,12 @@
 
     </div>
 
-  <video width="400" height="300" controls="controls" poster="media/img/3B0EDC09-EDC8-4C53-86FC-04A2BC7E820D.mp4">
 
+<center>
+  <video width="400" height="300" controls="controls" poster="media/img/3B0EDC09-EDC8-4C53-86FC-04A2BC7E820D.mp4">
    <source src="media/img/3B0EDC09-EDC8-4C53-86FC-04A2BC7E820D.mp4" type='video/mp4'>
   </video>
+</center>
 
 <iframe id="frame" src="https://www.youtube.com/embed/Poc6v2w7WK0?rel=0&autoplay=0"> </iframe>
     
