--- a/r.html
+++ b/r.html
@@ -208,7 +208,7 @@
 
 
 <center>
-  <video width="400" height="300" controls="controls" poster="media/img/3B0EDC09-EDC8-4C53-86FC-04A2BC7E820D.mp4">
+  <video id="frame" controls="controls" poster="media/img/3B0EDC09-EDC8-4C53-86FC-04A2BC7E820D.mp4">
    <source src="media/img/3B0EDC09-EDC8-4C53-86FC-04A2BC7E820D.mp4" type='video/mp4'>
   </video>
 </center>
