--- a/r.html
+++ b/r.html
@@ -151,6 +151,12 @@
                       </center>
     
                                     <center>
+                        <a href="https://pbs.twimg.com/media/D6yujqcWwAE7WHo.jpg">
+  <img src="https://pbs.twimg.com/media/D6yujqcWwAE7WHo.jpg" style="border-radius: 10px;">
+                        </a>
+                      </center>
+    
+                                    <center>
                         <a href="media/img/post.jpg">
   <img src="media/img/post.jpg" style="border-radius: 10px;">
                         </a>
