--- a/prizm.html
+++ b/prizm.html
@@ -1,2 +1,3 @@
-<div class="textwidget custom-html-widget"><script src="https://widgets.coingecko.com/coingecko-coin-price-chart-widget.js"></script>
+<div class="textwidget custom-html-widget">
+  <script src="https://widgets.coingecko.com/coingecko-coin-price-chart-widget.js"></script>
 <coingecko-coin-price-chart-widget coin-id="prizm" currency="usd" height="300" width="300" locale="en" vce-ready=""></coingecko-coin-price-chart-widget></div>
