--- a/prizm.html
+++ b/prizm.html
@@ -2,7 +2,7 @@
 <div class="textwidget custom-html-widget">
   <script src="https://widgets.coingecko.com/coingecko-coin-price-chart-widget.js">
   </script>
-<coingecko-coin-price-chart-widget coin-id="prizm" currency="usd" height="300" width="300" locale="en" vce-ready="">
+<coingecko-coin-price-chart-widget coin-id="prizm" background-color="#fff" currency="rub" height="300" width="300" locale="ru" vce-ready="">
   </coingecko-coin-price-chart-widget>
 </div>
 </center>
