--- a/prizm.html
+++ b/prizm.html
@@ -1,4 +1,9 @@
 <center>
+  <style>
+    .cg-container canvas {
+    background-color: #fff!important;
+}
+  </style>
 <div class="textwidget custom-html-widget">
   <script src="https://widgets.coingecko.com/coingecko-coin-price-chart-widget.js">
   </script>
