--- a/prizm.html
+++ b/prizm.html
@@ -13,7 +13,7 @@
     color: #FFF!important;
   }
   .cg-container canvas {
-background: #181818!important;
+background: #fff!important;
 }
   `
   sh.appendChild(style)
