--- a/prizm.html
+++ b/prizm.html
@@ -7,10 +7,10 @@
   var style = document.createElement('style');
   style.textContent = `
 .cg-container {
-  color: #FFF;
+ /* color: #FFF;*/
 }
 .cg-widget a {
-    color: #FFF!important;
+   /* color: #FFF!important;*/
   }
   .cg-container canvas {
 background: #fff!important;
