--- a/prizm.html
+++ b/prizm.html
@@ -10,7 +10,7 @@
  /* color: #FFF;*/
 }
 .cg-widget a {
-   /* color: #FFF!important;*/
+   color: #FFF!important;
   }
   .cg-container canvas {
 background: #fff!important;
