--- a/prizm.html
+++ b/prizm.html
@@ -32,5 +32,4 @@ background: #fff!important;
   </script>
 <coingecko-coin-price-chart-widget coin-id="prizm" currency="rub" height="300" width="300" locale="ru" background-color="#fff"  vce-ready="">
   </coingecko-coin-price-chart-widget>
-</div>
-</center>
+</div></center>
