--- a/prizm.html
+++ b/prizm.html
@@ -23,9 +23,7 @@ background: #fff!important;
 <center>
   
   <style>
-    .cg-container canvas {
-    background-color: #fff!important;
-}
+    .cg-container canvas {background-color: #fff!important;}
   </style>
 <div class="textwidget custom-html-widget">
   <script src="https://widgets.coingecko.com/coingecko-coin-price-chart-widget.js">
