--- a/prizm.html
+++ b/prizm.html
@@ -8,6 +8,10 @@
 .cg-container {
  /* color: #FFF;*/
 }
+.cg-primary-color-dark {
+    color: #ff1010 !important;
+    display:none;
+}
 .cg-widget a {
 display:none;
    color: #FFF!important;
