--- a/prizm.html
+++ b/prizm.html
@@ -13,7 +13,7 @@
     display:none;
 }
 .cg-widget a {
-display:none;
+   /*display:none;*/
    color: #FFF!important;
   }
   .cg-container canvas {
