--- a/prizm.html
+++ b/prizm.html
@@ -10,7 +10,7 @@
 }
 .cg-primary-color-dark {
     color: #ff1010 !important;
-    display:none;
+   /* display:none;*/
 }
 .cg-widget a {
    /*display:none;*/
