--- a/prizm.html
+++ b/prizm.html
@@ -16,6 +16,9 @@
    /*display:none;*/
    color: #FFF!important;
   }
+.cg-powered {
+    display: none;
+}
   .cg-container canvas {
 background: #fff!important;
 }
