--- a/prizm.html
+++ b/prizm.html
@@ -16,6 +16,11 @@
    /*display:none;*/
    color: #FFF!important;
   }
+
+.cg-bold.cg-medium a {
+    color: #4c4c4c!important;
+}
+
 .cg-powered {
     display: none;
 }
