--- a/prizm.html
+++ b/prizm.html
@@ -24,6 +24,9 @@
 .cg-powered {
     display: none;
 }
+.cg-container {
+    border: 0;
+}
   .cg-container canvas {
 background: #fff!important;
 }
