--- a/prizm.html
+++ b/prizm.html
@@ -28,6 +28,9 @@
     border: 0;
     color: #8dc647;
 }
+.cg-price-chart-link {
+    color: rgba(255, 255, 255, 0);
+}
   .cg-container canvas {
 background: #fff!important;
 }
