--- a/prizm.html
+++ b/prizm.html
@@ -47,6 +47,6 @@ background: #fff!important;
 <div class="textwidget custom-html-widget">
   <script src="https://widgets.coingecko.com/coingecko-coin-price-chart-widget.js">
   </script>
-<coingecko-coin-price-chart-widget coin-id="prizm" currency="rub" height="300" width="300" locale="ru" background-color="#fff"  vce-ready="">
+<coingecko-coin-price-chart-widget coin-id="prizm" currency="rub" height="300" locale="ru" background-color="#fff"  vce-ready="">
   </coingecko-coin-price-chart-widget>
 </div></center>
