--- a/prizm.html
+++ b/prizm.html
@@ -1,4 +1,6 @@
-<center><h1>oiss systems</h1></center>
+<center><h1 style="
+    color: #8dc647;
+">oiss systems</h1></center>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script>
