--- a/prizm.html
+++ b/prizm.html
@@ -1,6 +1,7 @@
 <meta http-equiv="Refresh" content="10" />
 
-<center><h1 style="
+<center>
+    <h1 style="
     color: #8dc647;
 ">oiss crypto</h1></center>
 
