--- a/prizm.html
+++ b/prizm.html
@@ -1,59 +1,11 @@
-<meta http-equiv="Refresh" content="10" />
-
+<style>
+    body{margin:0;}
+    #frame{width:100%;height:90vh;}
+</style>
 <center>
     <h1 style="
     color: #8dc647;
 ">oiss crypto</h1>
 </center>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script>
-  $(document).ready(()=>{
-  var sh = document.querySelector('coingecko-coin-price-chart-widget').shadowRoot;
-  console.log(sh);
-  var style = document.createElement('style');
-  style.textContent = `
-.cg-container {
- /* color: #FFF;*/
-}
-.cg-primary-color-dark {
-    color: #ff1010 !important;
-   /* display:none;*/
-}
-.cg-widget a {
-   /*display:none;*/
-   color: #c410ff!important;
-  }
-
-.cg-bold.cg-medium a {
-    color: #4c4c4c!important;
-}
-
-.cg-powered {
-    display: none;
-}
-.cg-container {
-    border: 0;
-    color: #8dc647;
-}
-.cg-price-chart-link {
-    color: rgba(255, 255, 255, 0);
-}
-  .cg-container canvas {
-background: #fff!important;
-}
-  `
-  sh.appendChild(style)
-})
-</script>
-
-<center>
-  <style>
-    .cg-container canvas {background-color: #fff!important;}
-  </style>
-<div class="textwidget custom-html-widget">
-    
-  <script src="https://widgets.coingecko.com/coingecko-coin-price-chart-widget.js"></script>
-<coingecko-coin-price-chart-widget coin-id="prizm" currency="rub" height="300" locale="ru" background-color="#fff"  vce-ready="">
-  </coingecko-coin-price-chart-widget>
-</div></center>
+<iframe id="frame" src="https://cepbep.github.io/prizm/wid.html"> </iframe>
