--- a/prizm/wid.html
+++ b/prizm/wid.html
@@ -1,10 +1,6 @@
 <meta http-equiv="Refresh" content="10" />
 
-<center>
-    <h1 style="
-    color: #8dc647;
-">oiss crypto</h1>
-</center>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script>
@@ -47,7 +43,7 @@ background: #fff!important;
 
 <center>
   <style>
-    .cg-container canvas {background-color: #fff!important;}
+    ::-webkit-scrollbar{width:0px;}
   </style>
 <div class="textwidget custom-html-widget">
     
