--- a/prizm.html
+++ b/prizm.html
@@ -1,5 +1,5 @@
 <style>
-    body{margin:0;}
+    body{margin:0;}::-webkit-scrollbar{width:0px;}
     #frame{width:100%;height:90vh;}
 </style>
 <center>
