--- a/prizm.html
+++ b/prizm.html
@@ -8,4 +8,4 @@
 ">oiss crypto</h1>
 </center>
 
-<iframe id="frame" src="https://cepbep.github.io/prizm/wid.html"> </iframe>
+<iframe id="frame" src="prizm/wid.html"> </iframe>
