--- a/prizm.html
+++ b/prizm.html
@@ -1,6 +1,6 @@
 <style>
     body{margin:0;}::-webkit-scrollbar{width:0px;}
-    #frame{width:100%;height:90vh;}
+    #frame{width:100%;height:90vh;border:0;}
 </style>
 <center>
     <h1 style="
