--- a/prizm.html
+++ b/prizm.html
@@ -1,3 +1,4 @@
+<link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
 <style>
     body{margin:0;}::-webkit-scrollbar{width:0px;}
     #frame{width:100%;height:90vh;border:0;}
