--- a/prizm.html
+++ b/prizm.html
@@ -4,7 +4,7 @@
     #frame{width:100%;height:90vh;border:0;}
 </style>
 <center>
-    <h1 style="color: #8dc647;">oiss crypto</h1>
+    <h1 style="color: #8dc647;margin-top: 30px;">oiss crypto</h1>
 </center>
 
 <iframe id="frame" src="prizm/wid.html"> </iframe>
