--- a/prizm.html
+++ b/prizm.html
@@ -1,4 +1,5 @@
 <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
     body{margin:0;font-family: 'Press Start 2P', cursive;}::-webkit-scrollbar{width:0px;}
     #frame{width:100%;height:90vh;border:0;}
