--- a/prizm/wid.html
+++ b/prizm/wid.html
@@ -1,4 +1,5 @@
 <meta http-equiv="Refresh" content="10" />
+<link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script>
   $(document).ready(()=>{
