--- a/prizm/wid.html
+++ b/prizm/wid.html
@@ -40,7 +40,7 @@ background: #fff!important;
 </script>
 
 <center>
-  <style>body{margin:0;}
+  <style>body{margin:0;font-family: 'Press Start 2P', cursive;}
     ::-webkit-scrollbar{width:0px;}
   </style>
 <div class="textwidget custom-html-widget">
