--- a/prizm/wid.html
+++ b/prizm/wid.html
@@ -41,7 +41,7 @@ background: #fff!important;
 
 <center>
   <style>body{margin:0;font-family: 'Press Start 2P', cursive;}
-    ::-webkit-scrollbar{width:0px;}
+    ::-webkit-scrollbar{width:0px;}a {text-decoration:none;color:#8dc647;}
   </style>
 <div class="textwidget custom-html-widget">
     
