--- a/prizm/wid.html
+++ b/prizm/wid.html
@@ -47,5 +47,5 @@ background: #fff!important;
   <script src="https://widgets.coingecko.com/coingecko-coin-price-chart-widget.js"></script>
 <coingecko-coin-price-chart-widget coin-id="prizm" currency="rub" height="300" locale="ru" background-color="#fff"  vce-ready="">
   </coingecko-coin-price-chart-widget>
-</div><br> <a href="https://roy.cash/club?ref=PRIZM32528">ссылка для регистрации</a> </center>
+  </div><br> <a href="https://roy.cash/club?ref=PRIZM32528"><h1>ссылка для регистрации</h1></a> </center>
 
