--- a/prizm/wid.html
+++ b/prizm/wid.html
@@ -7,6 +7,7 @@
   console.log(sh);
   var style = document.createElement('style');
   style.textContent = `
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
 .cg-container {
  /* color: #FFF;*/
 }
