--- a/prizm.html
+++ b/prizm.html
@@ -6,3 +6,5 @@
 </center>
 
 <iframe id="frame" src="prizm/wid.html"> </iframe>
+
+ <a href="https://roy.cash/club?ref=PRIZM32528"><h2>ссылка для регистрации</h2></a> 
