--- a/prizm.html
+++ b/prizm.html
@@ -7,4 +7,4 @@
 
 <iframe id="frame" src="prizm/wid.html"> </iframe>
 
- <a href="https://roy.cash/club?ref=PRIZM32528"><h2>ссылка для регистрации</h2></a> 
+<center><a href="https://roy.cash/club?ref=PRIZM32528"><h2>ссылка для регистрации</h2></a></center> 
