--- a/prizm/wid.html
+++ b/prizm/wid.html
@@ -41,7 +41,7 @@ background: #fff!important;
 </script>
 <center>
   <style>body{margin:0;font-family: 'Press Start 2P', cursive;}
-    ::-webkit-scrollbar{width:0px;}a {text-decoration:none;color:#8dc647;}
+    ::-webkit-scrollbar{width:0px;}
   </style>
   
 <div class="textwidget custom-html-widget">
@@ -49,5 +49,5 @@ background: #fff!important;
   <script src="https://widgets.coingecko.com/coingecko-coin-price-chart-widget.js"></script>
 <coingecko-coin-price-chart-widget coin-id="prizm" currency="rub" height="300" locale="ru" background-color="#fff"  vce-ready="">
   </coingecko-coin-price-chart-widget>
-  </div><br> <a href="https://roy.cash/club?ref=PRIZM32528"><h2>ссылка для регистрации</h2></a> </center>
+  </div><br> </center>
 
