--- a/prizm.html
+++ b/prizm.html
@@ -4,7 +4,5 @@
 </style><center>
     <h1 style="color: #8dc647;margin-top: 30px;">oiss crypto</h1>
 </center>
-
 <iframe id="frame" src="prizm/wid.html"> </iframe>
-
-<center><a href="https://roy.cash/club?ref=PRIZM32528"><h2>ссылка для регистрации</h2></a></center> 
+<center><a href="https://roy.cash/club?ref=PRIZM32528"><h2 style="margin: 0;padding: 0;">ссылка для регистрации</h2></a></center> 
