--- a/prizm/wid.html
+++ b/prizm/wid.html
@@ -28,6 +28,7 @@
 .cg-container {
     border: 0;
     color: #8dc647;
+    font-family: 'Press Start 2P', cursive;
 }
 .cg-price-chart-link {
     color: rgba(255, 255, 255, 0);
