--- a/prizm/wid.html
+++ b/prizm/wid.html
@@ -25,6 +25,9 @@
 .cg-powered {
     display: none;
 }
+.cg-lg {
+    font-size: 19px!important;
+}
 .cg-container {
     border: 0;
     color: #8dc647;
