--- a/prizm/wid.html
+++ b/prizm/wid.html
@@ -25,9 +25,7 @@
 .cg-powered {
     display: none;
 }
-.cg-lg {
-    font-size: 19px!important;
-}
+.cg-lg {font-size: 19px!important;}.cg-base {font-size: 13px;}
 .cg-container {
     border: 0;
     color: #8dc647;
