--- a/prizm/wid.html
+++ b/prizm/wid.html
@@ -25,7 +25,7 @@
 .cg-powered {
     display: none;
 }
-.cg-lg {font-size: 19px!important;}.cg-base {font-size: 13px;}
+.cg-lg{font-size: 19px!important;}.cg-base{font-size: 13px;}.cg-medium{font-size: 16.2px;}
 .cg-container {
     border: 0;
     color: #8dc647;
