--- a/prizm/wid.html
+++ b/prizm/wid.html
@@ -30,6 +30,7 @@
     border: 0;
     color: #8dc647;
     font-family: 'Press Start 2P', cursive;
+    font-size: 10px;
 }
 .cg-price-chart-link {
     color: rgba(255, 255, 255, 0);
