--- a/cryptochat.html
+++ b/cryptochat.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html>
-	
+<html>	
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ue</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-    <style>::-webkit-scrollbar{
-    width: 0px;}</style>
+    <style>::-webkit-scrollbar{width: 0px;}</style>
   </head>
    <body>
    <img src="https://sun9-28.userapi.com/c850416/v850416788/166b5d/yL4fCaIcVNE.jpg"/>
+   <img src="https://sun9-63.userapi.com/c205816/v205816788/2602/IiFkJy1fpJc.jpg"/>
   </body>
 </html>
