--- a/cryptochat.html
+++ b/cryptochat.html
@@ -9,6 +9,10 @@
   </head>
    <body>
    <img class="desc" src="https://sun9-28.userapi.com/c850416/v850416788/166b5d/yL4fCaIcVNE.jpg"/>
-   <img class="mob" src="https://sun9-63.userapi.com/c205816/v205816788/2602/IiFkJy1fpJc.jpg"/>
+   <img class="mob" src="https://sun9-63.userapi.com/c205816/v205816788/2602/IiFkJy1fpJc.jpg"/>    
+   <img class="mob" src="https://sun9-52.userapi.com/c205816/v205816788/26fc/0B4CFKo9IAI.jpg"/>
+   <img class="mob" src="https://sun9-70.userapi.com/c858336/v858336788/11a6e2/7Dsg3snM59o.jpg"/>
+   <img class="style" src="https://sun9-26.userapi.com/c858336/v858336788/11a6e9/wAaN9Eg31aQ.jpg"/>
+   <img class="style" src="https://sun9-52.userapi.com/c858336/v858336874/119628/bYPDP653s14.jpg"/>
   </body>
 </html>
