--- a/cryptochat.html
+++ b/cryptochat.html
@@ -13,8 +13,8 @@
    <img class="mob" src="https://sun9-63.userapi.com/c205816/v205816788/2602/IiFkJy1fpJc.jpg"/>    
    <img class="mob" src="https://sun9-52.userapi.com/c205816/v205816788/26fc/0B4CFKo9IAI.jpg"/>
    <img class="mob" src="https://sun9-70.userapi.com/c858336/v858336788/11a6e2/7Dsg3snM59o.jpg"/>
+   <img class="mob" src="https://sun9-47.userapi.com/c858336/v858336874/119630/FRf1JOOrYWQ.jpg"/>
    <img class="style" src="https://sun9-26.userapi.com/c858336/v858336788/11a6e9/wAaN9Eg31aQ.jpg"/>
    <img class="style" src="https://sun9-52.userapi.com/c858336/v858336874/119628/bYPDP653s14.jpg"/>
-   <img class="style" src="https://sun9-47.userapi.com/c858336/v858336874/119630/FRf1JOOrYWQ.jpg"/>
   </body>
 </html>
