--- a/cryptochat.html
+++ b/cryptochat.html
@@ -8,6 +8,7 @@
     <style>::-webkit-scrollbar{width: 0px;}</style>
   </head>
    <body>
+     <img class="desc" src="media/img/1.jpg"/>
    <img class="desc" src="https://sun9-28.userapi.com/c850416/v850416788/166b5d/yL4fCaIcVNE.jpg"/>
      
    <img class="mob" src="https://sun9-63.userapi.com/c205816/v205816788/2602/IiFkJy1fpJc.jpg"/>    
