--- a/m.html
+++ b/m.html
@@ -1,5 +1,22 @@
-<script src="https://unpkg.com/minterjs-wallet"></script>
+<script src="https://unpkg.com/minter-js-sdk"></script>
 <script>
-const wallet = minterWallet.generateWallet();
-const wallet2 = minterWallet.walletFromMnemonic('...');
+const minter = new minterSDK.Minter({apiType: 'node', baseURL: 'https://minter-node-1.testnet.minter.network/'});
+const txParams = new minterSDK.SendTxParams({    privateKey: '5fa3a8b186f6cc2d748ee2d8c0eb7a905a7b73de0f2c34c5e7857c3b46f187da',
+    nonce: 1,
+    chainId: 1,
+    address: 'Mx7633980c000139dd3bd24a3f54e06474fa941e16',
+    amount: 10,
+    coinSymbol: 'MNT',
+    feeCoinSymbol: 'ASD',
+    gasPrice: 1,
+    message: 'custom message',
+});
+
+minter.postTx(txParams)
+    .then((txHash) => {
+        alert(`Tx created: ${txHash}`);
+    }).catch((error) => {
+        const errorMessage = error.response.data.error.log;
+        alert(errorMessage);
+    });
 </script>
