--- a/cryptochat.html
+++ b/cryptochat.html
@@ -10,7 +10,7 @@
    <body>
      <img class="style" src="https://sun9-52.userapi.com/c858336/v858336874/119628/bYPDP653s14.jpg"/>
      <img class="desc" src="media/img/1.jpg"/>
-   <img class="desc" src="https://sun9-28.userapi.com/c850416/v850416788/166b5d/yL4fCaIcVNE.jpg"/>
+ <!--<img class="desc" src="https://sun9-28.userapi.com/c850416/v850416788/166b5d/yL4fCaIcVNE.jpg"/>-->
      
    <img class="mob" src="https://sun9-63.userapi.com/c205816/v205816788/2602/IiFkJy1fpJc.jpg"/>    
    <img class="mob" src="https://sun9-52.userapi.com/c205816/v205816788/26fc/0B4CFKo9IAI.jpg"/>
