--- a/cryptochat.html
+++ b/cryptochat.html
@@ -12,6 +12,8 @@
      <img class="desc" src="media/img/1.jpg"/>
  <!--<img class="desc" src="https://sun9-28.userapi.com/c850416/v850416788/166b5d/yL4fCaIcVNE.jpg"/>-->
      
+     <img class="desc" src="https://cepbep.github.io/media/img/graph.jpeg"/>
+     
    <img class="mob" src="https://sun9-63.userapi.com/c205816/v205816788/2602/IiFkJy1fpJc.jpg"/>    
    <img class="mob" src="https://sun9-52.userapi.com/c205816/v205816788/26fc/0B4CFKo9IAI.jpg"/>
    
