--- a/cryptochat.html
+++ b/cryptochat.html
@@ -12,7 +12,7 @@
      <img class="desc" src="media/img/1.jpg"/>
  <!--<img class="desc" src="https://sun9-28.userapi.com/c850416/v850416788/166b5d/yL4fCaIcVNE.jpg"/>-->
      
-     <img class="desc" src="https://cepbep.github.io/media/img/graph.jpeg"/>
+     <a href="media/video/minter.mp4" target="blank"><img class="desc" src="img/graph.jpeg"/></a>
      
    <img class="mob" src="https://sun9-63.userapi.com/c205816/v205816788/2602/IiFkJy1fpJc.jpg"/>    
    <img class="mob" src="https://sun9-52.userapi.com/c205816/v205816788/26fc/0B4CFKo9IAI.jpg"/>
