--- a/camera/index.html
+++ b/camera/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	-->
 
-	<title>ascii camera</title>
+	<title>test</title>
 	<meta charset="utf-8" />
 	 <link rel="stylesheet" href="css/main.css"/>
 	 <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
