--- a/ascii.html
+++ b/ascii.html
@@ -2,7 +2,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="text-align: center;">
+<body style="text-align: center;overflow:hidden;">
  <a href="https://cepbep.github.io/camera/" style="text-decoration: none;">
 <code style="text-align: center;">
 <span style="display:block;line-height:8px;font-size: 8px;font-weight:bold;white-space:pre;font-family: monospace;color: black;background: white;text-align: center;">
