--- a/ascii.html
+++ b/ascii.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
  </head>
 <body style="text-align: center;overflow:hidden;">
 <a href="https://cepbep.github.io/camera/" style="text-decoration: none;">
