--- a/psone.html
+++ b/psone.html
@@ -1,1 +1,4 @@
+<style>
+  
+</style>
 <iframe src="https://archive.org/embed/psx_thps2" width="560" height="384" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
