--- a/psone.html
+++ b/psone.html
@@ -1,2 +1,2 @@
-<style>body{,margin:0;} #frame{width:100%;height:95vh;}
-</style><iframe src="https://archive.org/embed/psx_thps2" id="frame" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+<style>body{,margin:0;} #frame{width:100%;height:95vh;}</style>
+<iframe src="https://archive.org/embed/psx_thps2" id="frame" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
