--- a/showcase/ue/panel_1.html
+++ b/showcase/ue/panel_1.html
@@ -1,1 +1,26 @@
+ 
 
+
+
+
+
+<center>
+<div style="margin-top: 15%;">
+    <div class="btn btn-two" onclick="toggle_button(true);">
+      <span><b>OPEN DOOR</b></span>
+    </div><br><br>
+    <div style="margin-top: 50px;" class="btn btn-two" onclick="toggle_button(false);">
+      <span><b>CLOSE DOOR</b></span>
+    </div>
+</div>
+
+		<script type="text/javascript">
+
+			// Trigger events in game, feed UE4 JSON and parse it via blueprints
+			function toggle_button(flag)
+			{
+				blu_event('toggle','{"value":' + flag +'}');
+			}
+
+		</script>
+  <center>
