--- a/showcase/ue/panel_1.html
+++ b/showcase/ue/panel_1.html
@@ -7,10 +7,10 @@
 <center>
 <div style="margin-top: 15%;">
     <div class="btn btn-two" onclick="toggle_button(true);">
-      <span><b>OPEN DOOR</b></span>
+      <span><b>кнопка 1</b></span>
     </div><br><br>
     <div style="margin-top: 50px;" class="btn btn-two" onclick="toggle_button(false);">
-      <span><b>CLOSE DOOR</b></span>
+      <span><b>кнопка 2</b></span>
     </div>
 </div>
 
