--- a/showcase/ue/panel_1.html
+++ b/showcase/ue/panel_1.html
@@ -3,7 +3,7 @@
 
 
 <center>
-	
+	<h1>ПУЛЬТ УПРАВЛЕНИЯ РЕАЛЬНОЙ УСТАНОВКОЙ</h1>
 <div style="margin-top: 15%;">
     <div class="btn btn-two" onclick="toggle_button(true);">
       <span><b>кнопка 1</b></span>
