--- a/control_2.html
+++ b/control_2.html
@@ -5,8 +5,7 @@
 
 <style>
 body{font-family: 'Press Start 2P', cursive;margin:0;}
-b       {font-size: 2em;
-        width: 100%;
+b       {font-size: 2em;width: 100%;
         background-color: black;
         color: white;
         display: block;
