--- a/control_2.html
+++ b/control_2.html
@@ -7,8 +7,7 @@
 body{font-family: 'Press Start 2P', cursive;margin:0;}
 b       {font-size: 2em;width: 100%;
         background-color: black;
-        color: white;
-        display: block;
+        color: white;display: block;
         padding-top: 45px;
         padding-bottom: 45px;
         transition: all 1s ease;}
