--- a/control_2.html
+++ b/control_2.html
@@ -4,7 +4,7 @@
 <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
 
 <style>
-body{font-family: 'Press Start 2P', cursive;margin:0;}
+body{font-family: 'Press Start 2P', cursive;margin:0;}::-webkit-scrollbar{width:0px;}
 b       {font-size: 2em;width: 100%;
         background-color: black;
         color: white;display: block;
