--- a/control_1.html
+++ b/control_1.html
@@ -4,7 +4,7 @@
 <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
 
 <style>
-body{font-family: 'Press Start 2P', cursive;}
+body{font-family: 'Press Start 2P', cursive;}::-webkit-scrollbar{width:0px;}
 b{        font-size: 2em;
         width: 100%;
         background-color: black;
