--- a/control_1.html
+++ b/control_1.html
@@ -5,8 +5,7 @@
 
 <style>
 body{font-family: 'Press Start 2P', cursive;}::-webkit-scrollbar{width:0px;}
-b{        font-size: 2em;
-        width: 100%;
+b{      font-size: 2em;width: 100%;
         background-color: black;
         color: white;
         display: block;
