--- a/control_3.html
+++ b/control_3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- source https://cssdeck.com/labs/stylish-css-switch-buttons-->
-	<iframe id="frame" src="https://www.youtube.com/embed/KGEekP1102g"></iframe>
+	<iframe id="frame" src="https://www.youtube.com/embed/Rd6EXm1Bej4"></iframe>
 <span class="switch">
 	<span class="switch-border1">
 		<span class="switch-border2">
