--- a/control_3.html
+++ b/control_3.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-<!-- source https://cssdeck.com/labs/stylish-css-switch-buttons-->
+	<div class="cover"></div>
 	<iframe id="frame" src="https://www.youtube.com/embed/Rd6EXm1Bej4?rel=0&autoplay=1"></iframe>
 <span class="switch">
 	<span class="switch-border1">
