--- a/control_3.html
+++ b/control_3.html
@@ -6,8 +6,7 @@
   <link rel="stylesheet" href="3.css">
 
 </head>
-<body>
-	<div class="cover"></div>
+<body><div class="cover"></div>
 	<iframe id="frame" src="https://www.youtube.com/embed/Rd6EXm1Bej4?rel=0&autoplay=1"></iframe>
 <span class="switch">
 	<span class="switch-border1">
