--- a/pairs.html
+++ b/pairs.html
@@ -1,4 +1,5 @@
 <style>body{margin:0;font-family: 'Press Start 2P', cursive;overflow:hidden;}::-webkit-scrollbar{width:0px;}#frame{width:100%;height:53vh;border:0;}a{text-decoration:none;color:#8dc647;}
-</style><center>
+</style>
+<center>
 </center>
 <iframe id="frame" src="https://overproof-shelf.000webhostapp.com/pairs.php"> </iframe>
