--- a/table.html
+++ b/table.html
@@ -1,4 +1,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <style>
   body{margin:0;font-family: 'Press Start 2P', cursive;overflow:hidden;}::-webkit-scrollbar{width:0px;}#frame{width:100%;height:100vh;border:0;}a{text-decoration:none;color:#8dc647;}
-</style><iframe id="frame" src="https://overproof-shelf.000webhostapp.com/table.php"></iframe>
+</style>
+<div style="
+    height: 145px;
+    width: 100%;
+"></div>
+<iframe id="frame" src="https://overproof-shelf.000webhostapp.com/table.php"></iframe>
