--- a/table.html
+++ b/table.html
@@ -2,8 +2,7 @@
 <style>
   body{margin:0;font-family: 'Press Start 2P', cursive;overflow:hidden;}::-webkit-scrollbar{width:0px;}#frame{width:100%;height:100vh;border:0;}a{text-decoration:none;color:#8dc647;}
 </style>
-<div style="
-    height: 145px;
-    width: 100%;
-"></div>
+<div style="height: 145px;width: 100%;">
+  <div> </div>
+</div>
 <iframe id="frame" src="https://overproof-shelf.000webhostapp.com/table.php"></iframe>
