--- a/table.html
+++ b/table.html
@@ -3,6 +3,6 @@
   body{margin:0;font-family: 'Press Start 2P', cursive;overflow:hidden;}::-webkit-scrollbar{width:0px;}#frame{width:100%;height:100vh;border:0;}a{text-decoration:none;color:#8dc647;}
 </style>
 <div style="height: 145px;width: 100%;">
-  <div> </div>
+  <div style="height: 80px;width: 100%;background-color: aqua;"> 2 секунды </div>
 </div>
 <iframe id="frame" src="https://overproof-shelf.000webhostapp.com/table.php"></iframe>
