--- a/control_3.html
+++ b/control_3.html
@@ -8,8 +8,7 @@
 <body>  <!--<div class="cover"></div>-->
 	<iframe id="frame" src="https://www.youtube.com/embed/Rd6EXm1Bej4?rel=0&autoplay=0">
 	</iframe>
-	<!--
-<span class="switch">
+	<!--<span class="switch">
 	<span class="switch-border1">
 		<span class="switch-border2">
 			<input id="switch1" type="checkbox" checked />
