--- a/showcase/blockchain/nodes.html
+++ b/showcase/blockchain/nodes.html
@@ -6,7 +6,7 @@
     <title>(!)</title><!-- #F!nKgVGISQ !Tespm-wPJIJwRtajOEuV8g -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
-    <script src="p2p-graph.js"></script>
+    <script src="js/p2p-graph.js"></script>
     <style>
 line.link {
     stroke: #00ff59!important;
