--- a/showcase/blockchain/nodes.html
+++ b/showcase/blockchain/nodes.html
@@ -15,6 +15,9 @@ line.link {
   </style>
   </head>
   <body>
+<center>
+<h1 class="con">соединения</h1>
+</center>
     <div class="torrent-graph"></div>
     <script>
         let graph = new window.P2PGraph('.torrent-graph')
