--- a/showcase/blockchain/nodes.html
+++ b/showcase/blockchain/nodes.html
@@ -16,7 +16,7 @@ line.link {
   </head>
   <body>
 <center>
-<h1 class="con">соединения</h1>
+<h1 class="con">соединения..</h1>
 </center>
     <div class="torrent-graph"></div>
     <script>
