--- a/bprnt/Index.html
+++ b/bprnt/Index.html
@@ -16,7 +16,7 @@
 
             }
         </style>
-        <script src="blueprint-renderer.js"></script>
+        <script src="main.js"></script>
         <script>
             window.addEventListener("load", function () {
                 var render = new BlueprintRenderer('bluePrintRenderer');
