--- a/bprnt/test.html
+++ b/bprnt/test.html
@@ -1,4 +1,5 @@
-<html><head>
+<html>
+  <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title></title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
