--- a/bprnt/test.html
+++ b/bprnt/test.html
@@ -36,7 +36,7 @@ body {
   <script id="insert"></script>
 
 
-    <script src="/js/stringify.js?659a04aab04fbd31762a360cf13d7a67fdfd88f3" charset="utf-8"></script>
+    <script src="stringify.js?659a04aab04fbd31762a360cf13d7a67fdfd88f3" charset="utf-8"></script>
     <script>
       const customConsole = (w) => {
         const pushToConsole = (payload, type) => {
