--- a/bprnt/test.html
+++ b/bprnt/test.html
@@ -116,7 +116,7 @@ body {
     <script type="text/javascript">//<![CDATA[
 
 
- prepare(document, "https://raw.githubusercontent.com/strelok2012/BluePrintRenderer/master/tests/file_big.txt");
+ prepare(document, "bp.txt");
 
 
 
