--- a/bprnt/Index.html
+++ b/bprnt/Index.html
@@ -19,7 +19,7 @@
         <script>
             window.addEventListener("load", function () {
                 var render = new BlueprintRenderer('bluePrintRenderer');
-                render.renderFromFile("file_big.txt");
+                render.renderFromFile("bp.txt");
             }, false);
         </script>
 
