--- a/bprnt/Index.html
+++ b/bprnt/Index.html
@@ -15,7 +15,7 @@
                 user-select:none;
             }
         </style>
-        <script src="main.js"></script>
+        <script src="blueprint-renderer.js"></script>
         <script>
             window.addEventListener("load", function () {
                 var render = new BlueprintRenderer('bluePrintRenderer');
