--- a/bprnt/Index.html
+++ b/bprnt/Index.html
@@ -12,8 +12,7 @@
                 -ms-user-select:none;
                 -o-user-select:none;
                 user-select:none;
-            }
-        </style>
+            }</style>
         <script src="blueprint-renderer.js"></script>
         <script>
             window.addEventListener("load", function () {
