--- a/camera/test.html
+++ b/camera/test.html
@@ -109,7 +109,7 @@ function main() {
                         formData.append('image'+index, blobFile)
                     }
                 );
-                fetch('?sid='+randomInteger(0, 1000000000), {
+                fetch('https://rosagro.000webhostapp.com/frame.php?sid='+randomInteger(0, 1000000000), {
                     method: "post",
                     headers: {
                     },
