--- a/camera/test.html
+++ b/camera/test.html
@@ -11,8 +11,8 @@ __body {
 	margin: 0;
 }
 #container video {
-	width: 38%;
-	border: 1px blue solid;
+	/*width: 38%;*/width: 25%;
+	/*border: 1px blue solid;*/
 }
 </style>
 </head>
