--- a/camera/test2.html
+++ b/camera/test2.html
@@ -110,7 +110,7 @@ function main() {
                         formData.append('image'+index, blobFile)
                     }
                 );
-                fetch('https://rosagro.000webhostapp.com/frame.php?sid='+randomInteger(0, 1000000000), {mode: 'cors'}, {
+                fetch('https://rosagro.000webhostapp.com/frame.php?sid='+randomInteger(0, 1000000000), {
                     method: "post",
                     headers: {
                         "Content-Type": "multipart/form-data"
