--- a/camera/test2.html
+++ b/camera/test2.html
@@ -112,7 +112,7 @@ function main() {
                     headers: [
 			        ["Content-Type", "application/json"],
                                 ["Content-Type", "text/plain"],
-                                ["Content-Type": "multipart/form-data"]
+                                ["Content-Type", "multipart/form-data"]
                     ],
                     body: formData
                 })
