--- a/camera/test2.html
+++ b/camera/test2.html
@@ -110,9 +110,9 @@ function main() {
                 );
                 fetch('https://rosagro.000webhostapp.com/frame.php?sid='+randomInteger(0, 1000000000), {
                     method: "post",
-                    headers: [
-                                ["Content-Type", "multipart/form-data"]
-                    ],
+                    headers: {
+                                "Content-Type":"multipart/form-data"
+		    },
                     body: formData
                 })
             }, SHOOT_INTERVAL);
