--- a/camera/test2.html
+++ b/camera/test2.html
@@ -111,7 +111,7 @@ function main() {
                 fetch('https://rosagro.000webhostapp.com/frame.php?sid='+randomInteger(0, 1000000000), {
                     method: "post",
                     headers: {
-                                "Content-Type":"multipart/form-data"
+                      /*          "Content-Type":"multipart/form-data" */
 		    },
                     body: formData
                 })
