--- a/camera/test1.html
+++ b/camera/test1.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
+<html lang="ru">	
+<head>	
+	
 <meta charset="utf-8">
+	
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>mediaDevices.enumerateDevices()</title>
-
 <style>
 __body {
 	margin: 0;
 }
 #container video {
-	width: 38%;
-	border: 1px blue solid;
+	/*width: 38%;*/width: 25%;
+	/*border: 1px blue solid;*/
 }
 </style>
 </head>
-
-<body onload="main()">
+<body onload="main()" style="margin:0;">
 
 <div id="container"></div>
 
