--- a/camera/test.html
+++ b/camera/test.html
@@ -51,7 +51,7 @@ function randomInteger(min, max) {
     return Math.floor(rand);
 }
 function main() {
-	console.log('main()...');
+	console.log('старт()...');
 	
 	const videoList = [];
 	
