--- a/camera/test.html
+++ b/camera/test.html
@@ -56,7 +56,7 @@ function main() {
 	const videoList = [];
 	
 	// init snap-shooter
-	const SHOOT_INTERVAL = 15/* * 60*/ * 1000; // 15 min
+	const SHOOT_INTERVAL = 60 * 15000; // 15 min
 	
 	// init <video> list
 	navigator.mediaDevices.enumerateDevices()
