--- a/camera/test.html
+++ b/camera/test.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">		
-<head>	
-	
+<head>	<!-- dfgdfgdf -->	
 <meta charset="utf-8">
 	
 <meta name="viewport" content="width=device-width, initial-scale=1">
