--- a/camera/clean_test.html
+++ b/camera/clean_test.html
@@ -11,8 +11,8 @@ __body {
 	margin: 0;
 }
 #container video {
-	/*width: 38%;*/width: 25%;
-	/*border: 1px blue solid;*/
+	width: 25%;
+
 }
 </style>
 	
