--- a/camera/clean_test.html
+++ b/camera/clean_test.html
@@ -83,7 +83,8 @@ function main() {
 						})
 				}
             });
-		}).then(() => {
+		})
+		.then(() => {
             setInterval(() => {
                 const dataUriList = videoList.map(video => {
                     var canvas = document.createElement('canvas');
