--- a/camera/clean_test.html
+++ b/camera/clean_test.html
@@ -6,8 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>mediaDevices.enumerateDevices()</title>
 <style>
-__body {margin: 0;
-}
+__body {margin: 0;}
 #container video {
 	width: 25%;
 }
