--- a/camera/clean_test.html
+++ b/camera/clean_test.html
@@ -7,8 +7,7 @@
 <title>mediaDevices.enumerateDevices()</title>
 <style>
 __body {margin: 0;}
-#container video {
-	width: 25%;
+#container video {width: 25%;
 }
 </style>
 	
