--- a/strawberry.html
+++ b/strawberry.html
@@ -42,7 +42,7 @@ let classifier;
 let img;
 
 function preload() {
-  classifier = ml5.imageClassifier('https://cepbep.github.io/model.json');
+  classifier = ml5.imageClassifier('https://storage.googleapis.com/tm-model/AMWptylp4/model.json');
   img = loadImage('https://sun9-7.userapi.com/c852016/v852016239/f34a8/5lPT7O2wE70.jpg');
 }
 
