--- a/@/index.html
+++ b/@/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title></title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="https://appvk.github.io/assets/css/font-awesome/nativ/css/style.css">
   </head>
 <!--<body oncontextmenu="return false">-->
   <body>  
