--- a/@/index.html
+++ b/@/index.html
@@ -10,17 +10,38 @@
     <iframe id="frame" src="https://www.youtube.com/embed/GyCBVsBgpY4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="
     width: 100%;
     height: 100vh;
-    z-index: 54354334;
+    /* z-index: 54354334; */
+    position: absolute;
+    opacity: 0.48;
 "></iframe>
 
+
+
 <div class="la" style="
-    width: 100%;
-    height: 95vh;
-    background-color: #00ffee33;
+    width: 25%;
+    height: 25vh;
+    margin: 35px;
+    /* height: 100vh; */
+    background-color: #f0f6;
     position: absolute;
-    z-index: 4;
+    z-index: 8979879;
+    display: block;
+    left: 25px;
+    top: 25px;
+    border-radius: 8px;
 "></div>
-    <script src="https://appvk.github.io/assets/css/font-awesome/nativ/js/index.js"></script><canvas width="3840" height="1938"></canvas><canvas width="3840" height="1938"></canvas>
+   
+   <div class="la" style="
+    width: 25%;
+    height: 25vh;
+    margin: 35px;
+    background-color: #ffff007a;
+    position: absolute;
+    z-index: 8979879;
+    display: block;
+    border-radius: 8px;
+"></div>
+    <script src="https://appvk.github.io/assets/css/font-awesome/nativ/js/index.js"></script>
 
 
 </body>
