--- a/@/index.html
+++ b/@/index.html
@@ -7,13 +7,15 @@
   </head>
 <!--<body oncontextmenu="return false">-->
   <body>  
-    <iframe id="frame" src="https://www.youtube.com/embed/GyCBVsBgpY4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="
+   
+<iframe id="frame" src="https://www.youtube.com/embed/GyCBVsBgpY4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="
     width: 100%;
     height: 100vh;
-    /* z-index: 54354334; */
+    z-index: 1;
     position: absolute;
     opacity: 0.48;
-"></iframe>
+">
+   </iframe>
 
 
 
