--- a/@/index.html
+++ b/@/index.html
@@ -37,8 +37,22 @@
     top: 25px;
     border-radius: 8px;
 "></div>
-   
-   <div class="la" style="
+
+<div class="la" style="
+    width: 5%;
+    height: 7vh;
+    margin: 35px;
+    background-color: #00ffff82;
+    position: absolute;
+    z-index: 8979880;
+    display: block;
+    border-radius: 4px;
+    left: 25px;
+    top: 32px;
+    scroll-behavior: smooth;
+"></div>
+
+<div class="la" style="
     width: 25%;
     height: 25vh;
     margin: 35px;
@@ -48,6 +62,54 @@
     display: block;
     border-radius: 8px;
 "></div>
+
+<div class="la" style="
+    width: 25%;
+    height: 25vh;
+    margin: 35px;
+    background-color: #ffff007a;
+    position: absolute;
+    z-index: 8979879;
+    display: block;
+    border-radius: 8px;
+"></div>
+
+<div class="la" style="
+    width: 25%;
+    height: 25vh;
+    margin: 35px;
+    background-color: #ffff007a;
+    position: absolute;
+    z-index: 8979879;
+    display: block;
+    border-radius: 8px;
+"></div>
+
+<div class="la" style="
+    width: 5%;
+    left: 30px;
+    top: -220px;
+    height: 24vh;
+    margin: 35px;
+    background-color: #00ffff;
+    position: absolute;
+    z-index: 1;
+    display: block;
+    border-radius: 2px;
+"></div><div class="la" style="
+    width: 25%;
+    width: 5%;
+    height: 7vh;
+    margin: 35px;
+    background-color: #ff00527a;
+    position: absolute;
+    z-index: 8979892;
+    display: block;
+    border-radius: 2px;
+    left: 108px;
+    top: 105px;
+"></div>
+   
     <script src="https://appvk.github.io/assets/css/font-awesome/nativ/js/index.js"></script>
 
 
