--- a/@/index.html
+++ b/@/index.html
@@ -1,13 +1,12 @@
 <html>
  <head>
-  <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title></title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
       <link rel="stylesheet" href="https://appvk.github.io/assets/css/font-awesome/nativ/css/style.css">
   </head>
-<!--<body oncontextmenu="return false">-->
-  <body>  
-   
+   <body>   
    <iframe 
     id="frame"
     src="https://www.youtube.com/embed/GyCBVsBgpY4"
@@ -22,13 +21,11 @@
     opacity: 0.48;"
     ></iframe>
 
-
-
-<div class="la" style="
+    <div class="la" style="
     width: 25%;
     height: 25vh;
     margin: 35px;
-    /* height: 100vh; */
+    /*height: 100vh;*/
     background-color: #f0f6;
     position: absolute;
     z-index: 8979879;
@@ -36,7 +33,7 @@
     left: 25px;
     top: 25px;
     border-radius: 8px;
-"></div>
+    "></div>
 
 <div class="la" style="
     width: 5%;
