--- a/@/index.html
+++ b/@/index.html
@@ -71,24 +71,14 @@ footer {
 }
 
 .search-field {
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  display: block;
-  width: 45%;
-  padding: 11px 7px;
-  padding-right: 43px;
-  background: #fff;
-  color: #555;
-  border: 1px solid #c8c8c8;
-  font-size: 1.6em;
-  border-bottom-color: #d2e2e7;
-  border-radius: 1px;
-  -moz-border-radius: 1px;
-  -webkit-border-radius: 1px;
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1), 0 0 0 6px #f0f0f0;
-  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1), 0 0 0 6px #f0f0f0;
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1), 0 0 0 6px #f0f0f0;
+    display: block;
+    width: 45%;
+    padding: 11px 7px;
+    padding-right: 43px;
+    color: #555;
+    font-size: 1.6em;
+    -webkit-border-radius: 8px;
+    padding-left: 20px;
 }
 
 #search-btn {
