--- a/@/index.html
+++ b/@/index.html
@@ -147,7 +147,7 @@ footer {
     <div class="srch" style="position: absolute;z-index: 5;">
       <form id="search-form" name="search-form" onsubmit="return search()">
         <div class="fieldcontainer">
-          <input type="search" id="query" class="search-field" placeholder="слово..">
+          <input type="search" id="query" class="search-field" placeholder="слово ">
           <input type="submit" name="search-btn" id="search-btn" value="">
         </div>
       </form>
