--- a/@/index.html
+++ b/@/index.html
@@ -140,7 +140,7 @@ footer {
   </head>
  
    <body> 
-    <div class="srch" style="position: absolute;z-index: 5;">
+   <div class="srch" style="position: absolute;z-index: 5;text-align: center;align-content: center;left: 40%;top: 1em;">
       <form id="search-form" name="search-form" onsubmit="return search()">
         <div class="fieldcontainer">
           <input type="search" id="query" class="search-field" placeholder="слово ">
