--- a/@/test.html
+++ b/@/test.html
@@ -24,7 +24,7 @@
     <section>
       <form id="search-form" name="search-form" onsubmit="return search()">
         <div class="fieldcontainer">
-          <input type="search" id="query" class="search-field" placeholder="слово..">
+          <input type="search" id="query" class="search-field" placeholder="слово">
           <input type="submit" name="search-btn" id="search-btn" value="">
         </div>
       </form>
