--- a/@/index.html
+++ b/@/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Interactive 3D background</title>
+  <title>@</title>
   <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat'><link rel="stylesheet" href="./style.css">
 <link rel="stylesheet" href="https://appvk.github.io/assets/css/font-awesome/nativ/css/style.css">
