--- a/@/index.html
+++ b/@/index.html
@@ -60,7 +60,7 @@ div#page {
       </footer>
     </div>
   </div>
-  <script src="https://appvk.github.io/assets/css/font-awesome/nativ/js/index.js"></script>
+  <script src="v.js"></script>
   <canvas id="background"></canvas>
 </body>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/100/three.min.js'></script>
