--- a/@/index.html
+++ b/@/index.html
@@ -60,12 +60,13 @@ div#page {
       </footer>
     </div>
   </div>
-  <script src="v.js"></script>
-  <canvas id="background"></canvas>
-</body>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/100/three.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.0.3/chroma.min.js'></script>
 <script  src="script.js"></script>
+<!--<script src="v.js"></script>-->
+  <canvas id="background"></canvas>
+</body>
+
 </body>
 </html>
