--- a/buffer.html
+++ b/buffer.html
@@ -25,6 +25,6 @@ input#text {
 <p id="decoded"></p>
 </center>
 
-  <script  src="script.js"></script>
+  <script  src="buffer.js"></script>
 </body>
 </html>
