--- a/metamask.html
+++ b/metamask.html
@@ -7,7 +7,7 @@
  <body class="flex w-screen h-screen justify-center items-center">
    <div class="flex-col space-y-2 justify-center items-center">
      <button id='loginButton' onclick="" class="mx-auto rounded-md p-2 bg-purple-500 text-white">
-       Login with MetaMask
+      - Login with MetaMask -
      </button>
      <p id='userWallet' class='text-lg text-gray-600 my-2'></p>
    </div>
